--- a/o/ov/ove/overclockersclub.com.html
+++ b/o/ov/ove/overclockersclub.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the overclockersclub.com privacy policy that was archived on 2013-06-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130621005502id_/http%3A//www.overclockersclub.com/pages/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the overclockersclub.com privacy policy that was archived on 2013-12-21.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131221211147id_/http%3A//www.overclockersclub.com/pages/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xmlns:og="http://opengraphprotocol.org/schema/"><head>
 <title>Privacy Policy - Overclockers Club</title>
@@ -107,7 +107,7 @@ Follow Us!</h5>
 	</script>
 </div>
 <br><br>
-<iframe height="600" width="160" frameborder="0" marginheight="0" marginwidth="0" src="http://ah.pricegrabber.com/export_feeds.php?pid=bjicbch&amp;document_type=html&amp;topcat_id=1&amp;category=topcat:1&amp;banner_size=160x600&amp;banner_topc=2a3353&amp;banner_botc=000000&amp;banner_bgcolor=4A4343&amp;banner_border_color=1A1313&amp;font_color=dddddd&amp;link_color=FDB645&amp;show_images=1&amp;add_search=1&amp;iframe=1&amp;category=page:41" scrolling="No"></iframe>
+<iframe height="600" width="160" frameborder="0" marginheight="0" marginwidth="0" src="http://ah.pricegrabber.com/export_feeds.php?pid=bjicbch&amp;document_type=html&amp;topcat_id=1&amp;category=topcat:1&amp;banner_size=160x600&amp;banner_topc=2a3353&amp;banner_botc=000000&amp;banner_bgcolor=4A4343&amp;banner_border_color=1A1313&amp;font_color=dddddd&amp;link_color=FDB645&amp;show_images=1&amp;add_search=1&amp;iframe=1&amp;category=page:363" scrolling="No"></iframe>
 <script type="text/javascript"><!--
 		google_ad_client = "ca-pub-9579993617424571";
 		/* OCC_RON_160x600_LOWER_LEFT */
@@ -179,16 +179,16 @@ If you have any questions or suggestions regarding our privacy policy, please go
 <div class="section">
 <h5>Recent Articles</h5>
 <ul type="circle">
-<li><a href="http://www.overclockersclub.com/reviews/sandisk_extreme_ii_240/">SanDisk Extreme II 240 GB SSD Review</a></li>
-<li><a href="http://www.overclockersclub.com/reviews/pcmark8_review/">PCMark 8 Review</a></li>
-<li><a href="http://www.overclockersclub.com/reviews/cmstorm_stealth/">CM Storm QuickFire Stealth Mechanical Keyboard Review</a></li>
-<li><a href="http://www.overclockersclub.com/reviews/patriot_supersonic_magnum_256gb_usb_3/">Patriot Supersonic Magnum 256GB USB 3.0 Flash Drive Review</a></li>
-<li><a href="http://www.overclockersclub.com/reviews/msi_z87_gd65_gaming/">MSI Z87-GD65 Gaming Review</a></li>
-<li><a href="http://www.overclockersclub.com/reviews/coolermaster_n200/">Cooler Master N200 Review</a></li>
-<li><a href="http://www.overclockersclub.com/reviews/metro_last_light_review/">Metro: Last Light Review</a></li>
-<li><a href="http://www.overclockersclub.com/reviews/roccat_isku_fx_multicolor_gaming_keyboard_review/">ROCCAT Isku FX Multicolor Gaming Keyboard Review</a></li>
-<li><a href="http://www.overclockersclub.com/reviews/amd_a106800k_a106700_richland_apu/">AMD A10-6800K &amp; A10-6700 Richland APU Review</a></li>
-<li><a href="http://www.overclockersclub.com/reviews/asus_crosshair_formula_v_review/">ASUS Crosshair V Formula Z Motherboard Review</a></li>
+<li><a href="http://www.overclockersclub.com/reviews/fsp_twinkle_65/">FSP Twinkle 65 Universal Notebook Adapter Review</a></li>
+<li><a href="http://www.overclockersclub.com/reviews/fractal_design_arc_mini_r2/">Fractal Design ARC Mini R2 Case Review</a></li>
+<li><a href="http://www.overclockersclub.com/reviews/witcher_2_review/">The Witcher 2: Assassins of Kings 2-Years Later Review</a></li>
+<li><a href="http://www.overclockersclub.com/reviews/ecs_l337_gank_domination__z87h3ax_golden/">ECS L337 GANK Domination Z87H3-AX Golden Review</a></li>
+<li><a href="http://www.overclockersclub.com/reviews/logitech_g19s/">Logitech G19s Gaming Keyboard Review</a></li>
+<li><a href="http://www.overclockersclub.com/reviews/witcher_review/">The Witcher 5-Years Later Review</a></li>
+<li><a href="http://www.overclockersclub.com/reviews/coolermaster_n400/">Cooler Master N400 Review</a></li>
+<li><a href="http://www.overclockersclub.com/reviews/func_kb_460/">Func KB-460 Mechanical Gaming Keyboard Review</a></li>
+<li><a href="http://www.overclockersclub.com/reviews/noctua_nhu12s/">Noctua NH-U12S Review</a></li>
+<li><a href="http://www.overclockersclub.com/reviews/titan_master_usb_fan/">Titan Master USB Fan Review</a></li>
 </ul>
 <a href="http://www.overclockersclub.com/reviews/">» all reviews</a>
 </div>
@@ -197,25 +197,25 @@ If you have any questions or suggestions regarding our privacy policy, please go
 <div class="section">
 <h5>Forum Posts</h5>
 <ul type="circle">
-<li><a href="http://forums.overclockersclub.com/?showtopic=196172" target="_blank">Xbox One</a> </li>
-<li><a href="http://forums.overclockersclub.com/?showtopic=196015" target="_blank">NoobBoy</a> </li>
-<li><a href="http://forums.overclockersclub.com/?showtopic=170707" target="_blank">The "I Just Recently Watched Movies/TV Series" Topic</a> </li>
-<li><a href="http://forums.overclockersclub.com/?showtopic=196412" target="_blank">[Sale] GOG.com Summer Sale</a> </li>
-<li><a href="http://forums.overclockersclub.com/?showtopic=196274" target="_blank">AMD is insane</a> </li>
+<li><a href="http://forums.overclockersclub.com/?showtopic=197738" target="_blank">New to the forums</a> </li>
+<li><a href="http://forums.overclockersclub.com/?showtopic=197772" target="_blank">EuroFight's Free Games Thread</a> </li>
+<li><a href="http://forums.overclockersclub.com/?showtopic=197606" target="_blank">Any of you have a PS Vita?</a> </li>
+<li><a href="http://forums.overclockersclub.com/?showtopic=197781" target="_blank">Thin bezel monitors</a> </li>
+<li><a href="http://forums.overclockersclub.com/?showtopic=197780" target="_blank">Data Recovery Help</a> </li>
 </ul>
 </div>
 <div class="section">
 <h5>Latest News</h5>
 <ul type="circle">
-<li><a href="http://www.overclockersclub.com/news/34299/">Bringing About Color, Holographic Displays</a></li>
-<li><a href="http://www.overclockersclub.com/news/34304/">ECS KBN-I Motherboard for AMD Kabini Announced</a></li>
-<li><a href="http://www.overclockersclub.com/news/34303/">ASUS Has Impressive Showing at Computex Overclocking Contest</a></li>
-<li><a href="http://www.overclockersclub.com/news/34302/">NVIDIA SHIELD Receives Price Cut Ahead of Launch</a></li>
-<li><a href="http://www.overclockersclub.com/news/34295/">Distinguishing Qubits Nanometers Apart</a></li>
-<li><a href="http://www.overclockersclub.com/news/34301/">Hardware Roundup: Thursday Edition</a></li>
-<li><a href="http://www.overclockersclub.com/news/34298/">Mass Production of Flexible OLED Displays Starts This Year, According to LG</a></li>
-<li><a href="http://www.overclockersclub.com/news/34294/">Micro-Scale Batteries Printed</a></li>
-<li><a href="http://www.overclockersclub.com/news/34297/">Seagate Quietly Announces Two New SSHDs</a></li>
+<li><a href="http://www.overclockersclub.com/news/34966/">Mobile Use of Spotify Rises After Launch of Free Streaming App</a></li>
+<li><a href="http://www.overclockersclub.com/news/34965/">BlackBerry and Foxconn Partner for Manufacturing Deal</a></li>
+<li><a href="http://www.overclockersclub.com/news/34964/">AT&amp;T to Publish Transparency Report</a></li>
+<li><a href="http://www.overclockersclub.com/news/34963/">LG to Unveil webOS-Powered Smart TV</a></li>
+<li><a href="http://www.overclockersclub.com/news/34962/">Futuremark Partners with Quanta Computers for Benchmark Development</a></li>
+<li><a href="http://www.overclockersclub.com/news/34961/">Borrowing from Physics and Art for Improved Compression</a></li>
+<li><a href="http://www.overclockersclub.com/news/34960/">Hardware Roundup: Friday Edition</a></li>
+<li><a href="http://www.overclockersclub.com/news/34959/">Verizon to Publish Transparency Report</a></li>
+<li><a href="http://www.overclockersclub.com/news/34958/">Netflix to Incorporate HEVC Compression</a></li>
 </ul>
 </div>
 <div class="section">
@@ -235,25 +235,25 @@ If you have any questions or suggestions regarding our privacy policy, please go
 <div class="section">
 <h5>Most Popular Articles</h5>
 <ul type="circle">
-<li><a href="http://www.overclockersclub.com/reviews/msi_gtx_770/" class="header">MSI GTX 770 N770 TF 2GD5/OC Review</a></li>
-<li><a href="http://www.overclockersclub.com/reviews/intel_core_i7_4770k/" class="header">Intel Core i7 4770K Review</a></li>
-<li><a href="http://www.overclockersclub.com/reviews/powercolor_radeon_hd_7870_myst_edition_crossfire/" class="header">PowerColor Radeon HD 7870 Myst Edition Crossfire Review</a></li>
-<li><a href="http://www.overclockersclub.com/reviews/nvidia_geforce_gtx_780/" class="header">NVIDIA GeForce GTX 780 Review</a></li>
-<li><a href="http://www.overclockersclub.com/reviews/amd_a106800k_a106700_richland_apu/" class="header">AMD A10-6800K &amp; A10-6700 Richland APU Review</a></li>
+<li><a href="http://www.overclockersclub.com/reviews/nvidia_shield/" class="header">NVIDIA SHIELD Review</a></li>
+<li><a href="http://www.overclockersclub.com/reviews/logitech_g19s/" class="header">Logitech G19s Gaming Keyboard Review</a></li>
+<li><a href="http://www.overclockersclub.com/reviews/assassins_creed_4_review/" class="header">Assassin's Creed IV: Black Flag Review</a></li>
+<li><a href="http://www.overclockersclub.com/reviews/nzxt_source_530_case/" class="header">NZXT Source 530 Case Review</a></li>
+<li><a href="http://www.overclockersclub.com/reviews/noctua_nhu12s/" class="header">Noctua NH-U12S Review</a></li>
 </ul>
 </div>
 <div class="section">
 <h5>Latest Comments</h5>
 <ul type="circle">
-<li><a href="http://www.overclockersclub.com/news/34291/">AMD Unveils ARM-based Server SoCs, Plus Two x86 Server Processors</a> [3]</li>
-<li><a href="http://www.overclockersclub.com/news/34279/">Noctua Reveals a Plethora of New And Improved Products</a> [1]</li>
-<li><a href="http://www.overclockersclub.com/news/34271/">Club3D Ends Partnership with NVIDIA</a> [3]</li>
-<li><a href="http://www.overclockersclub.com/news/34151/">New Quantum Encryption System Created</a> [1]</li>
-<li><a href="http://www.overclockersclub.com/news/34262/">AMD Debuts the First-Ever Processor Running at 5GHz</a> [2]</li>
-<li><a href="http://www.overclockersclub.com/news/34261/">Sony Shows Off PlayStation 4 Hardware and Prices it at $399; Comes with 500GB Hard Drive</a> [1]</li>
-<li><a href="http://www.overclockersclub.com/news/34248/">Metal Gear Rising: Revengeance Coming to PC as Digital Download</a> [2]</li>
-<li><a href="http://www.overclockersclub.com/news/34247/">Learning How Magnetism and Superconductivity Behave in Iron-Based Superconductors</a> [1]</li>
-<li><a href="http://www.overclockersclub.com/news/34205/">New Tank Design for More Efficient Beer Brewing</a> [1]</li>
+<li><a href="http://www.overclockersclub.com/news/34879/">The OverclockersClub 2013 Christmas Contest is Here!</a> [24]</li>
+<li><a href="http://www.overclockersclub.com/news/34940/">Multiplayer Now Available for Just Cause 2</a> [1]</li>
+<li><a href="http://www.overclockersclub.com/news/34918/">OCC Needs News Editors</a> [3]</li>
+<li><a href="http://www.overclockersclub.com/news/34917/">New Means for Affecting Magnetism Discovered</a> [1]</li>
+<li><a href="http://www.overclockersclub.com/news/34884/">Toshiba Acquires OCZ for $35 Million</a> [1]</li>
+<li><a href="http://www.overclockersclub.com/news/34853/">Titan Contester Announced by ASUS</a> [1]</li>
+<li><a href="http://www.overclockersclub.com/news/34851/">16 Year Run Comes to an End for Winamp</a> [1]</li>
+<li><a href="http://www.overclockersclub.com/news/34838/">Thunderbolt Ready Program from Intel Hopes to Expand Reach of Interconnect Technology</a> [1]</li>
+<li><a href="http://www.overclockersclub.com/news/34835/">Printing Circuits to Reduce Time and Cost</a> [1]</li>
 </ul>
 </div>
  </td>
@@ -276,7 +276,7 @@ If you have any questions or suggestions regarding our privacy policy, please go
 <p>Also part of our network:
 <a href="http://www.talkandroid.com" title="Android news and reviews" target="_blank">TalkAndroid</a>, <a href="http://www.androidforum.com" title="Android forum and discussions" target="_blank">Android Forum</a>, <a href="http://www.iphoneinformer.com/" title="iPhone News for iOS, Hardware, and Apps" target="_blank">iPhone Informer</a>, <a href="http://www.neoseeker.com" title="Games and PC Enthusiast News, Walkthroughs, cheats and forums" target="_blank">Neoseeker</a>, and <a href="http://www.usaudiomart.com/" target="_blank">Used Audio Classifieds</a><br>
 </p>
-<div align="right">Elapsed: 0.0156471729</div>
+<div align="right">Elapsed: 0.0170099735</div>
 </div>
 <script src="http://www.google-analytics.com/urchin.js" type="text/javascript"></script>
 <script type="text/javascript">
