--- a/j/ja/jak/jakeludington.com.html
+++ b/j/ja/jak/jakeludington.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the jakeludington.com privacy policy that was archived on 2013-05-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130518170802id_/http%3A//www.jakeludington.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the jakeludington.com privacy policy that was archived on 2013-12-21.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131221214040id_/http%3A//www.jakeludington.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" id="sixapart-standard"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -13,14 +13,54 @@
 <link rel="stylesheet" href="http://img.jakeludington.com/jake-css/styles-site-111029.gz.css" type="text/css">
 <link rel="start" href="http://www.jakeludington.com/" title="Home">
 
-<script async="" src="https://sb.scorecardresearch.com/beacon.js"></script><script type="text/javascript" async="" src="https://apis.google.com/js/plusone.js"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.5.3/jquery-ui.min.js"></script>
-<script type="text/javascript">
-	$(document).ready(function(){
-		$("#featured > ul").tabs({fx:{opacity: "toggle"}}).tabs("rotate", 5000, true);
-	});
+<script async="" src="https://sb.scorecardresearch.com/beacon.js"></script><script type="text/javascript" async="" src="https://apis.google.com/js/plusone.js"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script async="" type="text/javascript" src="https://www.googletagservices.com/tag/js/gpt.js"></script><script type="text/javascript">
+var googletag = googletag || {};
+googletag.cmd = googletag.cmd || [];
+(function() {
+var gads = document.createElement('script');
+gads.async = true;
+gads.type = 'text/javascript';
+var useSSL = 'https:' == document.location.protocol;
+gads.src = (useSSL ? 'https:' : 'http:') + 
+'//www.googletagservices.com/tag/js/gpt.js';
+var node = document.getElementsByTagName('script')[0];
+node.parentNode.insertBefore(gads, node);
+})();
 </script>
-<script type="text/javascript" src="http://partner.googleadservices.com/gampad/google_service.js"></script><script type="text/javascript">GS_googleAddAdSenseService("ca-pub-5419695008531309");GS_googleEnableAllServices();</script><script type="text/javascript">GA_googleAddSlot("ca-pub-5419695008531309","indie-pages-atf-336x280");GA_googleAddSlot("ca-pub-5419695008531309","indie-300x250");GA_googleAddSlot("ca-pub-5419695008531309","indie-120x600");GA_googleAddSlot("ca-pub-5419695008531309","cat_games_336x280");GA_googleAddSlot("ca-pub-5419695008531309","cat-ask-jake-low-300x250");GA_googleAddSlot("ca-pub-5419695008531309","cat-ask-jake-336x280");GA_googleAddSlot("ca-pub-5419695008531309", "cat-camcorder-336x280");GA_googleAddSlot("ca-pub-5419695008531309","cat-itunes-iphone-ipod-300x250");GA_googleAddSlot("ca-pub-5419695008531309","cat-itunes-iphone-ipod-336x280");GA_googleAddSlot("ca-pub-5419695008531309","cat-outlook-powerpoint-low-300x250");GA_googleAddSlot("ca-pub-5419695008531309","cat-office-336x280");GA_googleAddSlot("ca-pub-5419695008531309","cat-dv-hacks-300x250");GA_googleAddSlot("ca-pub-5419695008531309","cat-dv-hacks-336x280");GA_googleAddSlot("ca-pub-5419695008531309","cat-downloads-336x280");GA_googleAddSlot("ca-pub-5419695008531309","cat-windows-xp-336x280");GS_googleAddAdSenseService("ca-pub-5419695008531309");GA_googleAddSlot("ca-pub-5419695008531309","cat-android-300x250");GA_googleAddSlot("ca-pub-5419695008531309","cat-android-336x280");GA_googleAddSlot("ca-pub-5419695008531309", "cat-gadgets-336x280");GA_googleAddSlot("ca-pub-5419695008531309", "cat-fonts-336x280");GA_googleAddSlot("ca-pub-5419695008531309","cat-mac-300x250");GA_googleAddSlot("ca-pub-5419695008531309","cat-mac-336x280");GA_googleAddSlot("ca-pub-5419695008531309","cat-xbox-300x250");GA_googleAddSlot("ca-pub-5419695008531309","cat-xbox-336x280");GA_googleAddSlot("ca-pub-5419695008531309", "cat-hdtv-336x280");GA_googleAddSlot("ca-pub-5419695008531309", "cat-photography-336x280");GA_googleAddSlot("ca-pub-5419695008531309","index-160x600");GA_googleAddSlot("ca-pub-5419695008531309","indie-pages-btf-336x280");</script><script type="text/javascript">GA_googleFetchAds();</script><script type="text/javascript">var _gaq=_gaq||[];_gaq.push(['_setAccount','UA-549759-1']);_gaq.push(['_trackPageview']);(function(){var ga=document.createElement('script');ga.type='text/javascript';ga.async=true;ga.src=('https:'==document.location.protocol?'https://ssl':'http://www')+'.google-analytics.com/ga.js';var s=document.getElementsByTagName('script')[0];s.parentNode.insertBefore(ga,s)})();</script><script type="text/javascript" src="http://www.google.com/jsapi"></script><script type="text/javascript">google.load('search','1');google.setOnLoadCallback(function(){google.search.CustomSearchControl.attachAutoCompletion('partner-pub-5419695008531309:kjrbv2i12a7',document.getElementById('q'),'cse-search-box')});</script>
+
+<script type="text/javascript">
+googletag.cmd.push(function() {
+googletag.defineSlot('/1004436/cat-android-300x250', [300, 250], 'div-gpt-ad-1377294082090-0').addService(googletag.pubads());
+googletag.defineSlot('/1004436/cat-android-336x280', [336, 280], 'div-gpt-ad-1377294082090-1').addService(googletag.pubads());
+googletag.defineSlot('/1004436/cat-ask-jake-336x280', [336, 280], 'div-gpt-ad-1377294082090-2').addService(googletag.pubads());
+googletag.defineSlot('/1004436/cat-ask-jake-low-300x250', [300, 250], 'div-gpt-ad-1377294082090-3').addService(googletag.pubads());
+googletag.defineSlot('/1004436/cat-camcorder-336x280', [336, 280], 'div-gpt-ad-1377294082090-4').addService(googletag.pubads());
+googletag.defineSlot('/1004436/cat-downloads-336x280', [336, 280], 'div-gpt-ad-1377294082090-5').addService(googletag.pubads());
+googletag.defineSlot('/1004436/cat-dv-hacks-300x250', [300, 250], 'div-gpt-ad-1377294082090-6').addService(googletag.pubads());
+googletag.defineSlot('/1004436/cat-dv-hacks-336x280', [336, 280], 'div-gpt-ad-1377294082090-7').addService(googletag.pubads());
+googletag.defineSlot('/1004436/cat-fonts-336x280', [336, 280], 'div-gpt-ad-1377294082090-8').addService(googletag.pubads());
+googletag.defineSlot('/1004436/cat-gadgets-336x280', [336, 280], 'div-gpt-ad-1377294082090-9').addService(googletag.pubads());
+googletag.defineSlot('/1004436/cat-hdtv-336x280', [336, 280], 'div-gpt-ad-1377294082090-10').addService(googletag.pubads());
+googletag.defineSlot('/1004436/cat-itunes-iphone-ipod-336x280', [336, 280], 'div-gpt-ad-1377294082090-11').addService(googletag.pubads());
+googletag.defineSlot('/1004436/cat-mac-300x250', [300, 250], 'div-gpt-ad-1377294082090-12').addService(googletag.pubads());
+googletag.defineSlot('/1004436/cat-mac-336x280', [336, 280], 'div-gpt-ad-1377294082090-13').addService(googletag.pubads());
+googletag.defineSlot('/1004436/cat-office-336x280', [336, 280], 'div-gpt-ad-1377294082090-14').addService(googletag.pubads());
+googletag.defineSlot('/1004436/cat-outlook-powerpoint-low-300x250', [300, 250], 'div-gpt-ad-1377294082090-15').addService(googletag.pubads());
+googletag.defineSlot('/1004436/cat-photography-336x280', [336, 280], 'div-gpt-ad-1377294082090-16').addService(googletag.pubads());
+googletag.defineSlot('/1004436/cat-windows-xp-336x280', [336, 280], 'div-gpt-ad-1377294082090-17').addService(googletag.pubads());
+googletag.defineSlot('/1004436/cat-xbox-300x250', [300, 250], 'div-gpt-ad-1377294082090-18').addService(googletag.pubads());
+googletag.defineSlot('/1004436/cat-xbox-336x280', [336, 280], 'div-gpt-ad-1377294082090-19').addService(googletag.pubads());
+googletag.defineSlot('/1004436/cat_games_336x280', [336, 280], 'div-gpt-ad-1377294082090-20').addService(googletag.pubads());
+googletag.defineSlot('/1004436/index-160x600', [160, 600], 'div-gpt-ad-1377294082090-21').addService(googletag.pubads());
+googletag.defineSlot('/1004436/indie-120x600', [120, 600], 'div-gpt-ad-1377294082090-22').addService(googletag.pubads());
+googletag.defineSlot('/1004436/indie-300x250', [300, 250], 'div-gpt-ad-1377294082090-23').addService(googletag.pubads());
+googletag.defineSlot('/1004436/indie-pages-atf-336x280', [336, 280], 'div-gpt-ad-1377294082090-24').addService(googletag.pubads());
+googletag.defineSlot('/1004436/indie-pages-btf-336x280', [336, 280], 'div-gpt-ad-1377294082090-25').addService(googletag.pubads());
+googletag.pubads().enableSingleRequest();
+googletag.enableServices();
+});
+</script>
+<script type="text/javascript">var _gaq=_gaq||[];_gaq.push(['_setAccount','UA-549759-1']);_gaq.push(['_trackPageview']);(function(){var ga=document.createElement('script');ga.type='text/javascript';ga.async=true;ga.src=('https:'==document.location.protocol?'https://ssl':'http://www')+'.google-analytics.com/ga.js';var s=document.getElementsByTagName('script')[0];s.parentNode.insertBefore(ga,s)})();</script>
 <script type="text/javascript">
   (function() {
     var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
@@ -43,8 +83,7 @@
 <div id="header-menu"><ul>
 <li><a href="http://www.jakeludington.com/jake-qa.phtml" title="Ask a Computer Help Question">Ask A Question</a></li><li><a href="http://videos.jakeludington.com/" title="Watch Computer Help Videos">Watch Videos</a></li><li><a href="http://www.jakeludington.com/subscribe.html" title="Subscribe">Subscribe</a></li><li><a href="http://www.jakeludington.com/tutorials/" title="Ebooks">Ebooks</a></li><li><a href="http://www.jakeludington.com/contact/" title="Contact Jake Ludington">Contact Jake</a></li>
 </ul></div>
-<div class="header-search"><form action="http://www.jakeludington.com/search-results.html" id="cse-search-box"><input type="hidden" name="cx" value="partner-pub-5419695008531309:kjrbv2i12a7"><input type="hidden" name="cof" value="FORID:10"><input type="hidden" name="ie" value="ISO-8859-1"><input type="text" name="q" size="40"><input type="submit" name="sa" value="Go"></form>
-<script type="text/javascript" src="http://www.google.com/cse/brand?form=cse-search-box&amp;lang=en"></script></div>
+<div class="header-search"><form action="http://www.jakeludington.com/search-results.html" id="cse-search-box"><input type="hidden" name="cx" value="partner-pub-5419695008531309:kjrbv2i12a7"><input type="hidden" name="cof" value="FORID:10"><input type="hidden" name="ie" value="ISO-8859-1"><input type="text" name="q" size="40"><input type="submit" name="sa" value="Search"></form></div>
                    </div>
                 </div>
             </div>
@@ -106,18 +145,12 @@ Sincerely,</p>
     <div id="beta-inner">
         
 
-        <div class="widget-featured-resources widget">
-    <h3 class="widget-header">Featured Resources</h3>
-    <div class="widget-content">
-<script type="text/javascript" language="javascript" src="http://cache.blogads.com/189397120/feed.js"></script>
-<br>
-	</div>
-</div><div class="widget-categories-jake widget"><h3 class="widget-header">Browse Categories</h3><div class="widget-content"><div class="jake-sidebar-group-content">
+        <div class="widget-categories-jake widget"><h3 class="widget-header">Browse Categories</h3><div class="widget-content"><div class="jake-sidebar-group-content">
 <strong>Multimedia Help</strong><br><a href="http://www.camcorderanswers.com/">Camcorder Answers</a><br><a href="http://www.jakeludington.com/avchd/">AVCHD Help</a><br><a href="http://www.jakeludington.com/camcorder/">Digital Video</a><br><a href="http://www.jakeludington.com/hdtv/">HDTV</a><br><a href="http://www.jakeludington.com/media_center_pc/">Media Center PC</a><br><a href="http://www.jakeludington.com/movie_maker/">Movie Maker Help</a><br><a href="http://www.jakeludington.com/photography/">Photography</a><br><a href="http://www.jakeludington.com/podcasting/">Podcasting</a><br>
 <br><strong>Productivity</strong><br><a href="http://www.jakeludington.com/gadget_envy/">Gadgets</a><br><a href="http://www.jakeludington.com/google/">Gmail Tips</a><br><a href="http://www.jakeludington.com/office/">Office Help</a><br><a href="http://www.jakeludington.com/outlook/">Outlook Tips</a><br><a href="http://www.jakeludington.com/powerpoint/">PowerPoint</a><br><a href="http://www.jakeludington.com/voip/">VoIP</a><br><a href="http://www.jakeludington.com/web_services/">Web Services</a><br>
 <br><strong>Mac, iPod, iPhone</strong><br><a href="http://www.jakeludington.com/mac/">Mac Help</a><br>
 <br><strong>Social Media</strong><br><a href="http://www.jakeludington.com/on-publishing/">Blogging Help</a><br><a href="http://www.jakeludington.com/facebook/">Facebook Help</a><br><a href="http://www.jakeludington.com/myspace/">MySpace Tips</a><br><a href="http://www.jakeludington.com/youtube/">YouTube Tips</a><br>
-<br><strong>Video Games</strong><br><a href="http://www.jakeludington.com/psp/">PSP Hacks</a><br><a href="http://www.sync2play.com/mp4vod/">PSP and iPod Movies</a><br><a href="http://www.jakeludington.com/xbox/">Xbox 360</a><br></div><br></div></div>
+<br><strong>Video Games</strong><br><a href="http://www.jakeludington.com/psp/">PSP Hacks</a><br><a href="http://www.jakeludington.com/xbox/">Xbox 360</a><br></div><br></div></div>
 
     </div>
 </div>
