--- a/r/ra/ran/rankhound.com.html
+++ b/r/ra/ran/rankhound.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the rankhound.com privacy policy that was archived on 2012-11-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20121110211220id_/http%3A//www.rankhound.com/info/privacy.cfm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the rankhound.com privacy policy that was archived on 2013-12-21.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131221225814id_/http%3A//www.rankhound.com/info/privacy.cfm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html lang="en" xmlns="http://www.w3.org/1999/xhtml"><head>
 	<title>Privacy Policy RankHound - RankHound</title>
@@ -7,26 +7,15 @@
 	<meta name="keywords" content="Privacy Policy RankHound, rankhound privacy, p3p compliance, p3p compliant">
 	<meta name="robots" content="index,follow">
 	<meta http-equiv="Content-type" content="text/html; charset=UTF-8">
-	<link rel="shortcut icon" href="http://www.rankhound.com/theme/rankhound/images/favicon.ico?3.8.3181">
-	<link rel="stylesheet" type="text/css" href="http://www.rankhound.com/theme/common/style/reset.css?3.8.3181">
-	<link rel="stylesheet" type="text/css" href="http://www.rankhound.com/js/jqueryui/jquery-ui-1.8.6.custom.css?3.8.3181">
-	<link rel="stylesheet" type="text/css" href="http://www.rankhound.com/theme/common/style/jquery.qtip.css?3.8.3181">
-	<link rel="stylesheet" type="text/css" href="http://www.rankhound.com/theme/common/style/style.css?3.8.3181">
-	<link rel="stylesheet" type="text/css" href="http://www.rankhound.com/theme/rankhound/style/style.css?3.8.3181"><!--[if lte IE 8]><link rel="stylesheet" type="text/css" href="http://www.rankhound.com/theme/common/style/style-ie.css?3.8.3181" /><link rel="stylesheet" type="text/css" href="http://www.rankhound.com/theme/rankhound/style/style-ie.css?3.8.3181" /><![endif]-->
-	<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" src="http://www.rankhound.com/js/jquery/jquery.min.js?3.8.3181"></script>
-	<script type="text/javascript" src="http://www.rankhound.com/js/jqueryui/jquery-ui-1.8.6.custom.min.js?3.8.3181"></script>
-	<script type="text/javascript" src="http://www.rankhound.com/js/jquery/jquery.livequery.js?3.8.3181"></script>
-	<script type="text/javascript" src="http://www.rankhound.com/js/jquery/jquery.hoverintent.js?3.8.3181"></script>
-	<script type="text/javascript" src="http://www.rankhound.com/js/jquery/jquery.blockui.js?3.8.3181"></script>
-	<script type="text/javascript" src="http://www.rankhound.com/js/jquery/excanvas.min.js?3.8.3181"></script>
-	<script type="text/javascript" src="http://www.rankhound.com/js/jquery/jquery.bgiframe.min.js?3.8.3181"></script>
-	<script type="text/javascript" src="http://www.rankhound.com/js/jquery/jquery.qtip.min.js?3.8.3181"></script>
-	<script type="text/javascript" src="http://www.rankhound.com/js/jquery/jquery.validationengine-en.js?3.8.3181"></script>
-	<script type="text/javascript" src="http://www.rankhound.com/js/jquery/jquery.validationengine.js?3.8.3181"></script>
-	<script type="text/javascript" src="http://www.rankhound.com/js/jquery/jquery.tablesorter.min.js?3.8.3181"></script>
-	<script type="text/javascript" src="http://www.rankhound.com/js/jquery/jquery.timers.js?3.8.3181"></script>
-	<script type="text/javascript" src="http://www.rankhound.com/js/global/global.js?3.8.3181"></script>
-	<script type="text/javascript" src="http://www.rankhound.com/js/global/messages.js?3.8.3181"></script>
+	<link rel="shortcut icon" href="http://www.rankhound.com/theme/rankhound/images/favicon.ico?5.0.4029">
+	<link rel="stylesheet" type="text/css" href="http://www.rankhound.com/theme/common/style/reset.css?5.0.4029">
+<link rel="stylesheet" type="text/css" href="http://www.rankhound.com/js/common/easyui/themes/gray/easyui.css?5.0.4029">
+	<link rel="stylesheet" type="text/css" href="http://www.rankhound.com/js/common/easyui/themes/icon.css?5.0.4029">
+<link rel="stylesheet" type="text/css" href="http://www.rankhound.com/theme/common/style/jquery.qtip.css?5.0.4029">
+	<link rel="stylesheet" type="text/css" href="http://www.rankhound.com/theme/common/style/style.css?5.0.4029">
+	<link rel="stylesheet" type="text/css" href="http://www.rankhound.com/theme/rankhound/style/style.css?5.0.4029">
+	<!--[if lte IE 8]><link rel="stylesheet" type="text/css" href="http://www.rankhound.com/theme/common/style/style-ie.css?5.0.4029" /><link rel="stylesheet" type="text/css" href="http://www.rankhound.com/theme/rankhound/style/style-ie.css?5.0.4029" /><![endif]-->
+<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" src="http://www.rankhound.com/combiner.cfm?token=js_840165DA19C1333548323C41E90B6A6E&amp;5.0.4029"></script>
 <script type="text/javascript">
 $(document).ready(function() { 
 $.getScript("https://apis.google.com/js/plusone.js",function() {
@@ -39,7 +28,7 @@ $.getScript("https://platform.twitter.com/widgets.js",function() { $("#socialtab
 <div id="container">
 <div id="wrapper">
 	<div id="content-top">
-<div id="header"><a id="headerlogo" href="http://www.rankhound.com/" title="RankHound Home"><img src="http://www.rankhound.com/theme/common/images/rh-blj-logo.png" width="210" height="140" alt="RankHound Home"></a>
+<div id="header"><a id="headerlogo" href="http://www.rankhound.com/" title="RankHound Home"></a>
 <div id="headeruppertab">
 <ul>
 <div id="frmsignin">
@@ -88,18 +77,17 @@ $.getScript("https://platform.twitter.com/widgets.js",function() { $("#socialtab
 <li style="margin-bottom: 5px;">We may collect certain technical information, which does not allow us to identify you personally, but pertains to your use of the Internet to access this site.  This information includes which web browser software you are using, and which computer operating system is running on your computer. This information enables us to enhance the content and user experience you receive from RankHound and specifically aids us in processing support requests.</li>
 </ul>
 
-<p>By using this web site, you consent to the collection and use of this information by Triangle Direct Media. If we decide to change our privacy policy, we will post the changes on this page so that you are always aware of what information we collect, how we use it, and under what circumstances we do or do not disclose it. 
+<p>By using this web site, you consent to the collection and use of this information by Triangle Direct Media. If we decide to change our privacy policy, we will post the changes on this page so that you are always aware of what information we collect, how we use it, and under what circumstances we do or do not disclose it.
 </p>
 
 </div>
 <div class="col200 z">
-<div class="boxed">
-<div class="tab ui-widget-header ui-state-default"><a class="tabicon information dead">Help &amp; Info</a></div>
-<div id="in-this-section" class="pad10">
+<div class="easyui-panel" title="Help &amp; Info" data-options="iconCls:'icon-help',collapsible:true,collapsed:false">
+<div class="pad10 display-onload">
 <ul class="recent-list">
 <li><a href="http://www.rankhound.com/info/about.cfm">About RankHound</a></li>
 <li><a href="http://www.rankhound.com/info/terms-of-use.cfm">Terms of Use</a></li>
-<li><a href="http://www.rankhound.com/info/privacy.cfm" class="active">Privacy</a></li> 
+<li><a href="http://www.rankhound.com/info/privacy.cfm" class="active">Privacy</a></li>
 <li><a href="http://www.rankhound.com/info/contact.cfm">Contact RankHound</a></li>
 </ul>
 </div>
@@ -110,7 +98,8 @@ $.getScript("https://platform.twitter.com/widgets.js",function() { $("#socialtab
 	</div>
 </div>
 <div id="content-bottom">
-<div id="footboxes">
+<a id="back-to-top" href="#">Back to Top</a>
+	<div id="footboxes">
 <div class="footbox">
 <h4>Site Navigation</h4>
 <div>
@@ -129,21 +118,21 @@ $.getScript("https://platform.twitter.com/widgets.js",function() { $("#socialtab
 </div>
 <div class="footbox">
 <h4>Copyright</h4>
+<a href="http://www.triangledirectmedia.com/" onclick="window.open(this.href); return false;" title="Triangle Direct Media" id="client-logo-footer">Triangle Direct Media</a>
 <div>
-Copyright © 2008-2012 <a href="http://www.triangledirectmedia.com/" onclick="window.open(this.href); return false;" title="Triangle Direct Media">Triangle Direct Media</a><br>
-Version Information: v3.8.3181<br>
+Copyright © 2008-2013 <a href="http://www.triangledirectmedia.com/" onclick="window.open(this.href); return false;" title="Triangle Direct Media">Triangle Direct Media</a><br>
+Version Information: v5.0.4029<br>
 </div>
-<div class="c" style="margin-top: 15px;"><span id="siteseal"><script type="text/javascript" src="https://seal.godaddy.com/getSeal?sealID=Upl37cUcavmkCEwTNRBDBHrZTkNlZSK7QehoZjqgoGPYQ8v7DiciGF"></script></span></div>
 </div>
 <script type="text/javascript">var _gaq = _gaq || []; _gaq.push(['_setAccount', 'UA-5483189-2']); _gaq.push(['_trackPageview']); (function() { var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true; ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js'; var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s); })(); </script>
 <br class="cb">
 	</div>
 	<div class="throbber"><div>Processing ... one moment please</div></div>
-	<div class="dialog" id="confirm-dialog"></div><div class="dialog" id="general-dialog"></div><div class="dialog" id="iframe-dialog"></div>
+	<div class="dialog" id="confirm-dialog"></div><div class="easyui-dialog" id="general-dialog" data-options="closed:true"></div>
 </div>
 </div>
 <script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
 <div class="rsidepanel c" id="socialtab" style="visibility: hidden;"><table border="0" cellspacing="10"><tbody><tr><td><iframe src="https://www.facebook.com/plugins/like.php?href=http://www.rankhound.com/&amp;send=false&amp;layout=box_count&amp;width=50&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font&amp;height=70" style="border:none; overflow:hidden; width:50px; height:70px;" allowtransparency="true" frameborder="0" scrolling="no"></iframe></td></tr><tr><td><g:plusone size="tall" href="http://www.rankhound.com/"></g:plusone></td></tr><tr><td><a href="http://twitter.com/share" class="twitter-share-button" data-url="http://www.rankhound.com/" data-count="vertical" title="Tweet it!">Tweet</a></td></tr></tbody></table></div>
 
 
-	</body></html>
+			</body></html>
